Update admin badge color

--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -568,8 +568,8 @@
   --badge-supporter-background: #e4445e;
   --badge-moderator-color: var(--fg-200);
   --badge-moderator-background: #4d628f;
-  --badge-admin-color: var(--fg-inverted);
-  --badge-admin-background: var(--bg-50);
+  --badge-admin-color: var(--fg-100);
+  --badge-admin-background: #79518d;
   --badge-author-color: var(--fg-200);
   --badge-author-background: #b1355a;
   --badge-override-color: var(--fg-300);
