--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -105,15 +105,8 @@
 
   // === LAYOUT ================================================================
 
-  --layout-hr-border: 2px solid var(--hr-border-color, var(--bg-400));
-  --layout-hr-border-dashed: 2px dashed var(--hr-border-color, var(--bg-700));
-
-  // === MINIMAL ===============================================================
-
-  // --minimal-page-box-shadow: 0 0 1px rgb(0 0 0 / 40%);
-  // --minimal-page-drop-shadow: drop-shadow(0 0 1px rgb(0 0 0 / 40%));
-  // --minimal-box-shadow: 0 0 1px rgb(0 0 0 / 40%);
-  // --minimal-drop-shadow: drop-shadow(0 0 1px rgb(0 0 0 / 40%));
+  --layout-hr-border: 2px solid var(--hr-border-color, hsl(var(--bg-950-free) / 15%));
+  --layout-hr-border-dashed: 2px dashed var(--hr-border-color, hsl(var(--bg-950-free) / 40%));
 
   // === PAGE ==================================================================
 
@@ -178,9 +171,8 @@
   // === MOBILE MENU ===========================================================
 
   --mobile-menu-background: var(--bg-100);
-  // --mobile-menu-advanced-background: color-mix(in srgb, var(--bg-950), white 3%);
-  // --mobile-menu-box-shadow: 2px 0 3px rgb(0 0 0 / 30%);
-  // --mobile-advanced-menu-site-box-shadow: inset -5px 0 3px -4px rgb(0 0 0 / 30%);
+  --mobile-menu-advanced-background: var(--bg-400);
+  --mobile-menu-box-shadow: 1px 0 3px rgb(0 0 0 / 30%);
   --mobile-menu-overlay: rgb(0 0 0 / 35%);
   --mobile-menu-bookmark-progress-background: hsl(var(--bg-950-free) / 10%);
   --mobile-menu-current-chapter-background: hsl(var(--bg-950-free) / 10%);
